--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,20 @@
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>2.1.8.RELEASE</version>
                 </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.8.1</version>
+                    <configuration>
+                        <source>11</source>
+                        <target>11</target>
+                        <testSource>11</testSource>
+                        <testTarget>11</testTarget>
+                        <showDeprecation>true</showDeprecation>
+                        <compilerArgument>-Xlint:unchecked</compilerArgument>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
