--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8000
+#server.port=8000
 #spring.data.mongodb.authentication-database=admin
 #spring.data.mongodb.username=root
 #spring.data.mongodb.password=root
@@ -12,16 +12,19 @@ server.port=8000
 #spring.datasource.password=1234
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.datasource.url=jdbc:sqlserver://171.244.3.173:1433;databaseName=vehicle_service
-spring.datasource.username=sa
-spring.datasource.password=chuongtq@1999
-
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=production
+spring.thymeleaf.mode=HTML
+logging.level.org.springframework=INFO
+server.port=${PORT:5000}
+spring.datasource.url=jdbc:mysql://b53e3807348957:6dc97879@us-cdbr-east-03.cleardb.com/heroku_86e9d4a22ce00a2?reconnect=true
+spring.datasource.username=b53e3807348957
+spring.datasource.password=6dc97879
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.proc.param_null_passing=true
-java.runtime.version=11
+debug=true
+spring.jpa.properties.hibernate.diale= org.hibernate.dialect.MySQL5Dialect
